2007-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAffineTransform.m: Avoid accessing internals of the base
	library class directly.  Mark many methods as deprecated.
	* Headers/AppKit/NSAffineTransform.h: Mark gnustep extensions as
	deprecated.  Perhaps we don't want to deprecate all of them though
	need feedback on that.

2007-03-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-gState): Generate a gstate if one is needed
	and none has been set up to now.

2007-03-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (NSView -_endSheet, NSView
	-_displayPageInRect:atPlacement:withInfo:): Get graphics context
	from the print operation. 
	* Source/NSView.m (-_lockFocusInContext:inRect:): When not set,
	get graphics context either from window or from the print operation.
	* Source/NSView.m (-lockFocusInRect, -lockFocusIfCanDraw): Don't
	set the graphics context.
	* Source/NSView.m: For all print methods get the context from
	the print operation.

2007-03-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBoundsRotation:): Adjust _bounds ivar to
	the rotation.
	* Source/NSView.m (-translateOriginToPoint:, -rotateByAngle:):
	Implemented via setBoundsOrigin: and rotateByAngle:.
	* Source/NSView.m (-_lockFocusInContext:inRect:): For rotated
	views compute the actual clip region instead of using _bounds.

2007-03-17  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile.postamble (before-uninstall): Uninstall gui.make.
	* Panels/GNUmakefile.postamble (after-uninstall): Fixed uninstall
	target.
	* Source/CompatibilityHeaders.make (after-install): Use
	ECHO_NOTHING and END_ECHO.
	(after-uninstall): New target that uninstalls the compatibility
	headers.
	
2007-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m: Set _isIdentity for all methods
	changing the matrix of the affine transform.

2007-03-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-abortModal): Call stopModalWithCode: to